V 2.1.0: upgrade due to parent pom.xml